--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <img src="sg-11134201-7rfgj-m9j8rue9gi5jbd.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="id-11134207-7r98s-lv8giufpr42xea.jpg" class="d-block w-100" alt="...">
+      <img src="https://dompetjuni.vercel.app/id-11134207-7r98s-lv8giufpr42xea.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
