--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
 
 <h6 class="fw-bold mt-5">Keunggulan:</h6>
 <ul class="mt-2 mb-0 small">
-  <li>100% produk original</li>
+  
   <li>Desain yang up-to-date, simpel, dan cocok untuk semua usia</li>
   <li>Kualitas terbaik dengan harga terjangkau</li>
   <li>Nyaman digunakan sehari-hari</li>
@@ -172,7 +172,7 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
             </div>
-            <p class="mt-2 mb-0 small">"Dompetnya bagus banget! Bahan terasa premium, jahitannya rapi. Sudah 3 bulan pakai masih awet."</p>
+            <p class="mt-2 mb-0 small">"Dompetnya bagus banget! Bahan terasa premium, jahitannya rapi. Sudah 6 bulan pakai masih awet."</p>
           </div>
         </div>
       </div>
@@ -237,7 +237,7 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
     </h2>
     <div id="faq1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
       <div class="accordion-body mt-2 mb-0 small">
-        Isi form dengan <strong>nama lengkap</strong> dan <strong>nomor WhatsApp</strong>, lalu klik tombol <strong>"Kirim ke WhatsApp"</strong>. Tim kami akan segera menghubungi Anda untuk konfirmasi pesanan.
+        Isi form dengan <strong>nama </strong> dan <strong>nomor WhatsApp</strong>, lalu klik tombol <strong>"Kirim ke WhatsApp"</strong>. Tim kami akan segera menghubungi Anda untuk konfirmasi pesanan.
       </div>
     </div>
   </div>
@@ -307,23 +307,11 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
     </div>
   </div>
 
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="heading7">
-      <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq7" aria-expanded="false" aria-controls="faq7">
-        7. Apakah produk ini original?
-      </button>
-    </h2>
-    <div id="faq7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#faqAccordion">
-      <div class="accordion-body mt-2 mb-0 small">
-        Ya, kami menjual produk 100% original dengan kualitas terbaik dan harga terjangkau.
-      </div>
-    </div>
-  </div>
 
   <div class="accordion-item">
     <h2 class="accordion-header" id="heading8">
       <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq8" aria-expanded="false" aria-controls="faq8">
-        8. Apa saja yang bisa disimpan di dompet ini?
+        7. Apa saja yang bisa disimpan di dompet ini?
       </button>
     </h2>
     <div id="faq8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#faqAccordion">
@@ -336,7 +324,7 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
   <div class="accordion-item">
     <h2 class="accordion-header" id="heading9">
       <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq9" aria-expanded="false" aria-controls="faq9">
-        9. Bagaimana cara merawat dompet ini?
+        8. Bagaimana cara merawat dompet ini?
       </button>
     </h2>
     <div id="faq9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#faqAccordion">
@@ -349,7 +337,7 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
   <div class="accordion-item">
     <h2 class="accordion-header" id="heading10">
       <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq10" aria-expanded="false" aria-controls="faq10">
-        10. Apakah ada garansi jika barang rusak saat diterima?
+        9. Apakah ada garansi jika barang rusak saat diterima?
       </button>
     </h2>
     <div id="faq10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#faqAccordion">
