--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
+ <!--Harga -->
+    <div class="d-flex justify-content-between">
+              <strong>Rina – Bandung</strong>
+              <div class="text-warning">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+            </div>
     <h6 class="fw-bold mt-5">Deskripsi Produk</h6>
 
 <p class="mt-2 mb-0 small">
