--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </div>
  <!--Harga -->
     <div class="d-flex justify-content-between">
-              <strong>Rina – Bandung</strong>
+              <strong><br/>Harga Rp 15.000</strong>
               <div class="text-warning">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
