--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
  <!--Harga -->
     <div class="d-flex justify-content-between">
               <strong><br/>Harga Rp 15.000</strong>
-              <div class="text-warning">
+              <div class="text-warning"><br/>
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
@@ -111,7 +111,7 @@ Dengan dimensi 22,5 x 9 x 1 cm saat dibuka, dompet ini sangat praktis dan tidak 
 <h6 class="fw-bold mt-5">Spesifikasi:</h6>
 <ul class="mt-2 mb-0 small">
   <li><strong>SKU:</strong> D 01</li>
-  <li><strong>Ukuran:</strong> 22,5 x 9 x 1 cm (dalam keadaan terbuka)</li>
+  <li><strong>Ukuran:</strong> 22,5 x 9 x 2 cm (dalam keadaan terbuka)</li>
   <li><strong>Berat:</strong> ±50 gram</li>
   <li><strong>Warna:</strong> Hitam</li>
 </ul>
