--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <meta name="keywords" content="promo dompet murah, dompet 15 ribu, dompet promo, dompet murah online">
 <meta name="author" content="PromoDompet.xyz">
 
+<!-- Favicon untuk semua browser -->
+<link rel="icon" type="image/png" sizes="16x16" href="safety-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="safety-icon(1).png">
+
+<!-- Favicon SVG untuk browser modern -->
+<link rel="icon" type="image/svg+xml" href="safety-icon32.svg">
+
 <!-- Meta untuk Google / SEO -->
 <meta itemprop="name" content="Promo Dompet Hanya 15 Ribu">
 <meta itemprop="description" content="Dapatkan dompet keren, cocok untuk usia 20-50 tahun hanya dengan 15 ribu! Stok terbatas, buruan sebelum kehabisan!">
